@@ -24,7 +24,7 @@ java {
 application {
     mainModule = 'com.crschnick.pdx_unlimiter.app'
     mainClass = 'com.crschnick.pdx_unlimiter.app.PdxuApp'
-    applicationDefaultJvmArgs = ["-Djdk.gtk.version=2" ]
+    applicationDefaultJvmArgs = ["-Djdk.gtk.version=2", "--add-exports", "javafx.graphics/com.sun.javafx.scene=com.jfoenix" ]
 }
 
 javafx {
@@ -41,6 +41,9 @@ repositories {
 }
 
 dependencies {
+    compile 'com.jfoenix:jfoenix:9.0.10'
+    implementation group: 'org.kordamp.ikonli', name: 'ikonli-javafx', version: "11.3.5"
+    implementation group: 'org.kordamp.ikonli', name: 'ikonli-materialdesign-pack', version: "11.3.5"
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: "2.11.3"
     implementation files("$buildDir/generated-modules/com.realityinteractive.imageio.tga-master-SNAPSHOT.jar")
     implementation files("$buildDir/generated-modules/dds-1.0.0.jar")
